fix: update weather proxy urls

--- a/show-the-local-weather-proxy/views/index.html
+++ b/show-the-local-weather-proxy/views/index.html
@@ -33,7 +33,7 @@
     <p class="usage">
       USAGE:<br />
       Use the endpoint:
-      <code>https://fcc-weather-api.freecodecamp.repl.co/</code>. Use this
+      <code>https://show-the-local-weather-proxy.freecodecamp.rocks/</code>. Use this
       endpoint to get the weather at a location. To prevent abuses this server
       accepts <code>GET</code> requests only, and serves only the route
       <code>/api/current?lon=:longitude&lat=:latitude</code>. Images links are
@@ -44,10 +44,10 @@
       <br />
       Request:
       <a
-        href="https://fcc-weather-api.freecodecamp.repl.co/api/current?lat=35&lon=139"
+        href="https://show-the-local-weather-proxy.freecodecamp.rocks/api/current?lat=35&lon=139"
         target="_blank"
         ><code
-          >https://fcc-weather-api.freecodecamp.repl.co/api/current?lat=35&lon=139</code
+          >https://show-the-local-weather-proxy.freecodecamp.rocks/api/current?lat=35&lon=139</code
         ></a
       >
       <br />
@@ -63,7 +63,7 @@
             "id": 801,
             "main": "Clouds",
             "description": "few clouds",
-            "icon": "https://fcc-weather-api.freecodecamp.repl.co/images/02n.png"
+            "icon": "https://show-the-local-weather-proxy.freecodecamp.rocks/images/02n.png"
           }
         ],
         "base": "stations",
