fix: stock price checker urls

--- a/stock-price-checker/views/index.html
+++ b/stock-price-checker/views/index.html
@@ -29,7 +29,7 @@
       <li>If I pass along 2 stocks, the return object will be an array with information about both stocks. Instead of
         <i>likes</i>, it will display <i>rel_likes</i> (the difference between the likes) on both.</li>
       <li>A good way to receive current prices is through our stock price proxy (replacing 'GOOG' with your stock symbol):
-        <code>https://Stock-Price-Checker-Proxy--freecodecamp.repl.co/v1/stock/GOOG/quote</code></li>
+        <code>https://stock-price-checker-proxy.freecodecamp.rocks/v1/stock/GOOG/quote</code></li>
       <li>All 5 functional tests are complete and passing.</li>
     </ol>
     <h3>Example usage:</h3>
