fix: update header parser urls

--- a/request-header-parser-microservice/views/index.html
+++ b/request-header-parser-microservice/views/index.html
@@ -16,7 +16,7 @@
         1. I can get the IP address, preferred languages (from header <code>Accept-Language</code>)<br> and system infos (from header <code>User-Agent</code>) for my device.
 
         <h3>Example Usage:</h3>
-        <a href="https://head-parser--freecodecamp.repl.co/api/whoami">
+        <a href="https://head-parser.freecodecamp.rocks/api/whoami">
           [base url]/api/whoami
         </a>
 
