fix: update url shortener url

--- a/url-shortener-microservice/views/index.html
+++ b/url-shortener-microservice/views/index.html
@@ -30,7 +30,7 @@
           <input type="submit" value="POST URL">
         </form>
         <h3>Example Usage:</h3>
-        <a href="https://url-shortener.freecodecamp.repl.co/api/shorturl/3">
+        <a href="https://url-shortener-microservice.freecodecamp.rocks/api/shorturl/3">
           [this_project_url]/api/shorturl/3
         </a>
 
