--- a/use-the-twitch-json-api-proxy/views/index.html
+++ b/use-the-twitch-json-api-proxy/views/index.html
@@ -35,7 +35,7 @@
       USAGE:<br />
       Replace the Twitch API <strong>base URL</strong>
       <code>https://api.twitch.tv/helix</code> with
-      <code>https://fcc-twitch-api.freecodecamp.repl.co/helix</code>. Use this endpoint according
+      <code>https://use-the-twitch-json-api-proxy.freecodecamp.rocks/helix</code>. Use this endpoint according
       to the
       <a href="https://dev.twitch.tv/docs/api/" target="_blank"
         >Twitch API documentation</a
@@ -49,7 +49,7 @@
       - This server will keep providing a static snapshot of the old API data,
       for the routes
       <code>/streams/:user | users/:user | /channels/:channel</code> at the
-      endpoint <code>https://fcc-twitch-api.freecodecamp.repl.co/twitch-api</code>. It will serve
+      endpoint <code>https://use-the-twitch-json-api-proxy.freecodecamp.rocks/twitch-api</code>. It will serve
       data ONLY for the streamers profiles listed in the challenge description,
       at
       <a
