--- a/weather-proxy/views/index.html
+++ b/weather-proxy/views/index.html
@@ -63,7 +63,7 @@
             "id": 801,
             "main": "Clouds",
             "description": "few clouds",
-            "icon": "https://weather-proxy.freecodecamp.rocks/images/02n.png"
+            "icon": "https://cdn.freecodecamp.org/weather-icons/02n.png"
           }
         ],
         "base": "stations",
