fix: update new image locations

--- a/anonymous-message-board/views/index.html
+++ b/anonymous-message-board/views/index.html
@@ -86,7 +86,7 @@
         <li>Complete functional tests that wholely test routes and pass.</li>
       </ol>
       <img
-        src="https://cdn.gomix.com/8f5547a1-a0d6-48f6-aa38-51753a0105f4%2FScreen%20Shot%202017-01-02%20at%201.04.10%20AM.png"
+        src="https://cdn.freecodecamp.org/demo-projects/anonymous-message-board-requests.png"
       />
       <br /><br />
       <h2>
