--- a/personal-library/views/index.html
+++ b/personal-library/views/index.html
@@ -30,7 +30,7 @@
         <li>All 6 functional tests requiered are complete and passing.</li>
       </ol>
       <br>
-      <img src='https://cdn.gomix.com/d7932c52-287f-4dae-b175-631fef453000%2FScreen%20Shot%202016-12-16%20at%201.35.56%20AM.png' />
+      <img src='https://cdn.freecodecamp.org/demo-projects/images/personal-library-requests.png' />
     </div>
     <hr style='margin: 50px'>
     <div id ='sampleposting'>
