--- a/american-british-translator/views/index.html
+++ b/american-british-translator/views/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>American/British English Translator</title>
-    <meta
-      name="description"
-      content="An example for the fCC QA American/British English Translator project"
-    />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="../public/style.css" type="text/css" />
-  </head>
-  <body>
-    <header>
-      <h1>
-        Quality Assurance 5: American / British English Translator
-      </h1>
-    </header>
-    <hr style="margin: 25px" />
-    <div class="container">
-      <div class="form-container">
-          <textarea
+
+<head>
+	<title>American/British English Translator</title>
+	<meta name="description" content="An example for the fCC QA American/British English Translator project" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="../public/style.css" type="text/css" />
+</head>
+
+<body>
+	<header>
+		<h1>
+			Quality Assurance 5: American / British English Translator
+		</h1>
+	</header>
+	<hr style="margin: 25px" />
+	<div class="container">
+		<div class="form-container">
+			<textarea
           rows="10"
           cols="60"
           id="text-input"
@@ -30,8 +29,7 @@
           <option value="american-to-british">American to British</option>
           <option value="british-to-american">British to American</option>
         </select>
-        <input type="button" value="Translate" id="translate-btn" />
-        <input type="button" value="Clear" id="clear-btn" />
+        <input type="button" value="Translate" id="translate-btn"/>
       </div>
       <div id="output-container">
         <div id="solution-container">
@@ -42,5 +40,5 @@
       </div>
     </div>
   </body>
-  <script src="../public/translator.js" type="module"></script>
+  <script src="../public/index.js"></script>
 </html>
