fix: remove user stories

--- a/secure-real-time-multiplayer-game/views/index.html
+++ b/secure-real-time-multiplayer-game/views/index.html
@@ -15,9 +15,7 @@
   </head>
   <body>
     <header>
-      <h1>
-        Information Security 5: Secure Real Time Multiplayer Game
-      </h1>
+      <h1>Secure Real Time Multiplayer Game</h1>
     </header>
     <hr style="margin: 25px" />
     <div class="container">
