--- a/timestamp-microservice/views/index.html
+++ b/timestamp-microservice/views/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Timestamp Microservice | freecodecamp.org</title>
+    <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
+  </head>
 
-   <head>
-      <title>Timestamp Microservice</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+  <body>
+    <h1>Timestamp Microservice</h1>
+    <hr />
+    <div class="container">
+      <h3>Example Usage:</h3>
+      <ul>
+        <li><a href="api/timestamp/2015-12-25">[project url]/api/timestamp/2015-12-25</a></li>
+        <li><a href="api/timestamp/1451001600000">[project url]/api/timestamp/1451001600000</a></li>
+      </ul>
 
-   <body>
-
-      <div class="container">
-        <h2>API Project: Timestamp Microservice</h2>
-        <h3>Example Usage:</h3>
-        <ul>
-          <li><a href="api/timestamp/2015-12-25">[project url]/api/timestamp/2015-12-25</a></li>
-          <li><a href="api/timestamp/1451001600000">[project url]/api/timestamp/1451001600000</a></li>
-        </ul>
-
-        <h3>Example Output:</h3>
-        <p>
-          <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-        </p>
-      </div>
-      <div class="footer">
-        <p>
-          By <a href="https://www.freecodecamp.org/">freeCodeCamp</a>
-        </p>
-      </div>
-   </body>
-
+      <h3>Example Output:</h3>
+      <p>
+        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+      </p>
+    </div>
+    <div class="footer">
+      <p>
+        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+      </p>
+    </div>
+  </body>
 </html>
