Apply suggestions from code review
Co-authored-by: Shaun Hamilton <51722130+Sky020@users.noreply.github.com>

--- a/american-british-translator/views/index.html
+++ b/american-british-translator/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>American/British English Translator</title>
-	<meta name="description" content="An example for the fCC QA American/British English Translator project" />
+	<meta name="description" content="An example for the fCC American/British English Translator project" />
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<h1>
-			Quality Assurance 5: American / British English Translator
+			American / British English Translator
 		</h1>
 	</header>
 	<hr style="margin: 25px" />
