--- a/timestamp-microservice/public/style.css
+++ b/timestamp-microservice/public/style.css
@@ -18,6 +18,10 @@ h3 {
   margin-top: 30px;
 }
 
+hr {
+	margin: 25px;
+}
+
 .footer {
 	margin-top: 40px;
 }
@@ -28,18 +32,13 @@ code {
   color: black;
   background-color: #fff;
 }
-ol {
-	list-style-position: outside;
-}
+
 ul {
 	list-style-type: none;
 }
 
 li {
   margin-bottom: 0.5em;
-}
-.user-stories li {
-  margin-bottom: 1em;
 }
 
 a {
