--- a/metric-imperial-converter/views/index.html
+++ b/metric-imperial-converter/views/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to HyperDev!</title>
-    <meta name="description" content="A cool thing made with HyperDev">
-    <link id="favicon" rel="icon" href="https://hyperdev.com/favicon-app.ico" type="image/x-icon">
+    <title>Metric/Imperial Converter</title>
+    <meta name="description" content="An example of the Free Code Camp Metric/Imperial Converter Project">
+    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,37 +11,37 @@
   </head>
   <body>
     <header>
-      <h1>
-        ISQA_2 - Metric/Imp Converter
-      </h1>
+      <h1>Metric/Imperial Converter</h1>
     </header>
-    <div style='margin-left: 5%; margin-top: 5%'>
-      <h3>Example usage:</h3>
+    <hr style='margin: 50px'>
+    <section>
+      <h3>Example usage</h3>
       <code>/api/convert?input=4gal</code><br>
       <code>/api/convert?input=1/2km</code><br>
       <code>/api/convert?input=5.4/3lbs</code><br>
       <code>/api/convert?input=kg</code><br>
-      <h3>Example return:</h3>
-      <code>{"initNum":3.1,"initUnit":"mi","returnNum":4.98895,"returnUnit":"km","string":"3.1 miles converts to 4.98895 kilometers"}</code>
-    </div>
+      <h3>Example return</h3>
+      <code>{ initNum: 3.1, initUnit: 'mi', returnNum: 4.98895, returnUnit: 'km', string: '3.1 miles converts to 4.98895 kilometers' }</code>
+    </section>
     <hr style='margin: 50px'>
-    <div id='testui' style='margin-left: 5%'>
-      <h2 style="text-align: left">Front-End:</h2>
-      <form id="convertForm" class="border">
-        <input type="text" id="convertField" name="input" placeholder="3.1mi" style="width: 200px">
-        <input id="convert" type="submit" value='Convert!'>
-      </form>
-      <p id='result'></p>
-      <code id='jsonResult'></code>
-    </div>
-    <hr style='margin: 50px; margin-top: 200px'>
+    <section>
+      <div id='testui' >
+        <h3 style="text-align: left">Front-End</h3>
+        <form id="convertForm" class="border">
+          <input type="text" id="convertField" name="input" placeholder="3.1mi" style="width: 200px">
+          <input id="convert" type="submit" value='Convert!'>
+        </form>
+        <p id='result'></p>
+        <code id='jsonResult'></code>
+      </div>
+    </section>
     <!-- Your web-app is https, so your scripts need to be too -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
     <script>
       $(function() {
-        $('#convertForm').submit(function() {
+        $('#convertForm').submit(function(event) {
           event.preventDefault();
           $.ajax({
             url: '/api/convert',
@@ -50,10 +50,6 @@
             success: function(data) {
               $('#result').text(data.string || data);
               $('#jsonResult').text(JSON.stringify(data));
-            },
-            error: function(jqXHR,textStatus){
-              $('#result').text('Error - ' + $('#convertField').val())
-              $('#jsonResult').text(jqXHR.responseText);
             }
           });
         });
