--- a/voting-app/public/main.css
+++ b/voting-app/public/main.css
@@ -65,6 +65,7 @@ body {
 }
    
 h1 {
+  color: #aaa;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
 }
