--- a/voting-app/views/newpoll.ejs
+++ b/voting-app/views/newpoll.ejs
@@ -7,6 +7,7 @@
   <% include ./navigation %>
   
   <div class="content-wrap">
+    <h1 class="block">New Poll</h1><br>
     <div class="element-wrap">
       <form enctype="x-www-form-urlencoded" action="/newpoll" method="post" id="newpoll">
         Question: <input type="text" name="newquestion"><br>
