--- a/voting-app/views/navigation.ejs
+++ b/voting-app/views/navigation.ejs
@@ -1,7 +1,7 @@
 <div>
    <% if (user) { %>
     <div class="nav">
-      <div>&nbsp;&nbsp;Welcome To My Voting App, <%= user %></div>
+      <div>&nbsp;&nbsp;Welcome, <%= user %></div>
       <div class="logo"></div>
       <div>
           <a class="nav-btn" href="/">Home</a>
@@ -12,7 +12,7 @@
     </div>
    <% } else { %>
     <div class="nav">
-      <div>&nbsp;&nbsp;Welcome to my voting app</div>
+      <div>&nbsp;&nbsp;Welcome</div>
       <div class="logo"></div>
       <div>
           <a class="nav-btn" href="/">Home</a>
