--- a/url-shortener-microservice/views/index.html
+++ b/url-shortener-microservice/views/index.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>URL Shortener Microservice | freeCodeCamp.org</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
+    />
+    <link href="/public/style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-   <head>
-      <title>URL Shortener</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="/public/style.css" rel="stylesheet" type="text/css">
-   </head>
-
-   <body>
-      <div class="container">
-        <h2>API Project: URL Shortener Microservice</h2>
-        <h3>Short URL Creation </h3>
-        <p>
-          example: <code>POST [project_url]/api/shorturl/new</code> - <code>https://www.google.com</code>
-        </p>
-        <form action="api/shorturl/new" method="POST">
-          <label for="url_input">URL to be shortened</label>
-          <input id="url_input" type="text" name="url" value="https://www.freecodecamp.org">
-          <input type="submit" value="POST URL">
+  <body>
+    <h1>URL Shortener Microservice</h1>
+    <h2>Short URL Creation</h2>
+    <p>
+      Example: <code>POST [project_url]/api/shorturl</code> -
+      <code>https://www.google.com</code>
+    </p>
+    <main>
+      <section>
+        <form action="api/shorturl" method="POST">
+          <fieldset>
+            <legend>URL Shortener</legend>
+            <label for="url_input">URL:</label>
+            <input
+              id="url_input"
+              type="text"
+              name="url"
+              placeholder="https://www.freecodecamp.org/"
+            />
+            <input type="submit" value="POST URL" />
+          </fieldset>
         </form>
-        <h3>Example Usage:</h3>
-        <a href="https://url-shortener-microservice.freecodecamp.rocks/api/shorturl/3">
-          [this_project_url]/api/shorturl/3
-        </a>
+      </section>
+      <h2>Example Usage:</h2>
+      <a
+        href="https://url-shortener-microservice.freecodecamp.rocks/api/shorturl/3"
+      >
+        [this_project_url]/api/shorturl/3
+      </a>
 
-        <h3>Will Redirect to:</h3>
-        <p>https://forum.freecodecamp.org/</p>
-      </div>
-      <div class="footer">
-        <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
-        </p>
-      </div>
-   </body>
-
-
+      <h3>Will Redirect to:</h3>
+      <p>https://forum.freecodecamp.org/</p>
+    </main>
+    <footer>
+      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+    </footer>
+  </body>
 </html>
