fix: remove not used part of log url description

--- a/exercise-tracker/views/index.html
+++ b/exercise-tracker/views/index.html
@@ -29,7 +29,7 @@
         <strong>GET user's exercise log: </strong>
         <code>GET /api/users/:_id/logs?[from][&amp;to][&amp;limit]</code>
       </p>
-      <p><strong>{ }</strong> = required, <strong>[ ]</strong> = optional</p>
+      <p><strong>[ ]</strong> = optional</p>
       <p><strong>from, to</strong> = dates (yyyy-mm-dd); <strong>limit</strong> = number</p>
     </div>
     <script>
