--- a/build-a-pinterest-clone/views/index.html
+++ b/build-a-pinterest-clone/views/index.html
@@ -6,7 +6,7 @@
 		<title>Pic-terest</title>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="/style.css">
-		<link rel="shortcut icon" href="https://pinterest-clone.freecodecamp.repl.co/assets/favicon.ico"  type="image/x-icon" />
+		<link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon.ico"  type="image/x-icon" />
 	</head>
 	<body>
     <div id="appView"></div>
