fix: make date input id unique

--- a/exercise-tracker/views/index.html
+++ b/exercise-tracker/views/index.html
@@ -22,7 +22,7 @@
         <input id="uid" type="text" name=":_id" placeholder=":_id" />
         <input id="desc" type="text" name="description" placeholder="description*" />
         <input id="dur" type="text" name="duration" placeholder="duration* (mins.)" />
-        <input id="dur" type="text" name="date" placeholder="date (yyyy-mm-dd)" />
+        <input id="date" type="text" name="date" placeholder="date (yyyy-mm-dd)" />
         <input type="submit" value="Submit" />
       </form>
       <p>
