chore(voting-app): update ejs

--- a/apps/voting-app/views/mypolls.ejs
+++ b/apps/voting-app/views/mypolls.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<% include ./head %>
+<%- include("head") -%>
 
 <body>
-  <% include ./navigation %>
+  <%- include("navigation") -%>
 
   <div class="content-wrap">
     <h1 class="block">My Polls</h1><br>
@@ -24,6 +24,6 @@
     </div>
   </div>
   
-  <% include ./footer %>
+  <%- include("footer") -%>
 </body>
 </html>
