--- a/apps/voting-app/views/newpoll.ejs
+++ b/apps/voting-app/views/newpoll.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<% include ./head %>
+<%- include("head") -%>
 
 <body>
-  <% include ./navigation %>
+  <%- include("navigation") -%>
   
   <div class="content-wrap">
     <h1 class="block">New Poll</h1><br>
