--- a/apps/voting-app/views/singlepoll.ejs
+++ b/apps/voting-app/views/singlepoll.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-<% include ./head %>
+<%- include("head") -%>
   
 <body>
-  <% include ./navigation %>
+  <%- include("navigation") -%>
 
   <div class="content-wrap">
     <% if (singlePoll) { %>
@@ -83,7 +83,7 @@
     <% } %>
   </div>
 
-  <% include ./footer %>
+  <%- include("footer") -%>
 </body>
 
 </html>
