--- a/apps/pokemon-search-app/public/styles.css
+++ b/apps/pokemon-search-app/public/styles.css
@@ -33,6 +33,8 @@ body {
 h1 {
   color: #fff;
   margin-top: 20px;
+  font-size: 1.7em;
+  text-align: center;
 }
 
 .container {
@@ -52,10 +54,15 @@ h1 {
 }
 
 #search-form {
+  flex-wrap: wrap;
   margin: 10px 0;
   padding: 5px;
   border-radius: 8px 8px 0 0;
   gap: 10px;
+}
+
+label {
+  align-self: center;
 }
 
 #search-input {
@@ -72,13 +79,6 @@ h1 {
   background-color: #a230d7;
   outline: none;
   border: none;
-}
-
-.sr-only {
-  position: absolute;
-  left: -10000px;
-  width: 1px;
-  height: 1px;
 }
 
 .output {
@@ -237,6 +237,10 @@ th {
 }
 
 @media screen and (min-width: 550px) {
+  h1 {
+    font-size: 2em;
+  }
+
   .container {
     width: 450px;
   }
