--- a/apps/pokemon-search-app/public/styles.css
+++ b/apps/pokemon-search-app/public/styles.css
@@ -21,25 +21,34 @@ img {
 /* Project styling */
 
 body {
+  height: 100vh;
   font-family: sans-serif;
   background-color: #0a0a23;
   color: #0a0a23;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.freecodecamp-logo {
+  height: 30px;
+  margin: 25px 0;
 }
 
 h1 {
   color: #fff;
-  margin-top: 20px;
   font-size: 1.7em;
   text-align: center;
 }
 
 .container {
   width: 325px;
-  margin: 30px 0;
+  margin: 25px 0;
   background-color: #fff;
   color: #000;
   border: 1px solid #fff;
@@ -76,7 +85,8 @@ label {
   width: 80px;
   border-radius: 20px;
   text-align: center;
-  background-color: #a230d7;
+  background-color: #8923b8;
+  color: #fff;
   outline: none;
   border: none;
 }
@@ -149,7 +159,7 @@ table {
   width: 100%;
   font-size: 1 rem;
   color: #fff;
-  background-color: #a230d7;
+  background-color: #8923b8;
 }
 
 th:nth-child(even),
